<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="tec.com.pr01_alumnosrealm.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/titulo"
        android:textSize="25dp"
        android:textStyle="bold" />
    <EditText
        android:inputType="number"
        android:id="@+id/control"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/control" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <EditText
            android:inputType="textCapWords"
            android:id="@+id/nombre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:hint="@string/nom" />

        <EditText
            android:inputType="textCapWords"
            android:id="@+id/apellidos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".7"
            android:hint="@string/ape" />

    </LinearLayout>

    <EditText
        android:inputType="textCapWords"
        android:id="@+id/carrera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/carrera" />



    <EditText
        android:inputType="textEmailAddress"
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Email" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnsave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".2"
            android:hint="@string/btnGuardar"
            android:textSize="20dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".2"
            android:hint="@string/btnMostrar"
            android:textSize="20dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btndelete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".2"
            android:hint="@string/btnEliminar"
            android:textSize="20dp"
            android:textStyle="bold" />
    </LinearLayout>

    <ListView
        android:id="@+id/listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </ListView>

</LinearLayout>
